HotFIx: Fix aligncenter helper on th

--- a/packages/styles/_sass/pm-styles/_pm-table.scss
+++ b/packages/styles/_sass/pm-styles/_pm-table.scss
@@ -14,6 +14,9 @@
 .pm-simple-table th {
   @extend .uppercase;
   @extend .alignleft;
+  &.aligncenter {
+    @extend .aligncenter;
+  }
 }
 
 /* simple dirty fix */
